2007-11-15	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>

	* Mono.Cecil.Pdb/default.build: fixed relative paths

2007-02-21  Jb Evain  <jb@nurv.fr>

	* Start working on local var debug infos emitting.

2007-02-21  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Pdb/PdbReader.cs
	  Mono.Cecil.Pdb/PdbHelper.cs
	  Mono.Cecil.Pdb/IMetaDataDispenser.cs:
		Refactor patches from:
		Sverre Boschman <s.r.boschman@iego-development.nl>

		- Force the release of the lock on the pdb on reading
		- Implement the ability to read a pdb in memory

2006-09-24  Jb Evain  <jbevain@gmail.com>

	* Handle the fact that a scope end points outside the cil stream.

2006-09-20  Jb Evain  <jbevain@gmail.com>

	* implement somes bits of the writing stuff.

2006-09-19  Jb Evain  <jbevain@gmail.com>

	* first checkin in SVN:
		This is the assembly to support reading and writing
		from Microsoft's pdb symbols store.

		It will only work on Windows until Microsoft release
		the spec for the pdb files.